Application Output Area | Create the new Output Area component #13

--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="footer-div">
+  <label class="footer-name-label">Ocpa Incorporated</label>
+  <label class="footer-address-label">Lujerului Drive 45</label>
+  <label class="footer-contact-label">0723xxxxx78 / ocpa@ocpainc.com</label>
+</div>
