--- a/src/app/Components/input-area/input-area.component.html
+++ b/src/app/Components/input-area/input-area.component.html
@@ -1,9 +1,10 @@
-<h1>Select desired configuration:</h1>
 <div class="input-area-div">
+  <h1>Select desired configuration:</h1>
   <p>Choose your location</p>
   <div class='server-address-div'>
-    <label for="serverAddress">Server address:</label>
-    <input id="serverAddressId" type="text" name="serverAddress" class="serverAddressClass">
+    <label for="serverAddress" class="server-address-label">Server address:</label>
+    <input id="serverAddressId" type="text" name="serverAddress" class="server-address-input-class" (change)="onServerAddressChange($event)">
+    <button id="refreshAddressButtonId" class="refreshAddressBtnClass" (click)="onRefreshBtnClicked()">Re-Connect</button>
   </div>
   <div class="regions-div">
     <div class="regionNameDivClass">
@@ -19,6 +20,7 @@
         <option *ngFor="let selectedSubRegion of selectedSubRegions" ([value])="selectedSubRegion">{{selectedSubRegion.name}}</option>
       </select>
     </div>
+
     <div class="cityDivClass">
       <label for="city">City:</label>
       <select id="cityId" name="city" class="cityClass" (change)="onChangeCity($event)">
