Create the service to handle the data | Create a new service component to handle the data #15

--- a/src/app/Components/output-area/output-area.component.html
+++ b/src/app/Components/output-area/output-area.component.html
@@ -1,16 +1,20 @@
-<div id="OutputAreaId" class="output-area-class">
+<div id="OutputAreaId" class="output-area-class" *ngIf="selectedCity">
   <div class="display-forecast-title-class">
     <h1>Display forecast for this specific area:</h1>
-    <h1 class="specific-area-name" *ngIf="inputAreaComp.selectedCity.name" >{{inputAreaComp.selectedCity.name}}</h1>
+    <h1 class="specific-area-name" *ngIf="selectedCity" >{{selectedCity}}</h1>
   </div>
 
-  <div *ngFor="let row of mockupdata | paginate: { itemsPerPage: pageSize, currentPage: page }" id="DataGridId" class="data-grid-class">
+  <div *ngFor="let row of data | paginate: { itemsPerPage: pageSize, currentPage: page }" id="DataGridId" class="data-grid-class">
     <label class="data-grid-head-cell">Date</label>
+    <label class="data-grid-head-cell">Feel</label>
+    <label class="data-grid-head-cell">Forecast</label>
     <label class="data-grid-head-cell">Min temperature</label>
     <label class="data-grid-head-cell">Max temperature</label>
     <label class="data-grid-head-cell">Normal Min temperature</label>
     <label class="data-grid-head-cell">Normal Max temperature</label>
     <label class="data-grid-row-cell">{{row.date | date}}</label>
+    <label class="data-grid-row-cell">{{row.feel}}</label>
+    <label class="data-grid-row-cell">{{row.forecast}}</label>
     <label class="data-grid-row-cell">{{row.tmin}}</label>
     <label class="data-grid-row-cell">{{row.tmax}}</label>
     <label class="data-grid-row-cell">{{row.ntmin}}</label>
