--- a/src/app/Components/input-area/input-area.component.html
+++ b/src/app/Components/input-area/input-area.component.html
@@ -1,30 +1,23 @@
-<div class="input-area-div">
-  <h1>Select desired configuration:</h1>
-  <p>Choose your location</p>
-  <div class='server-address-div'>
-    <label for="serverAddress" class="server-address-label">Server address:</label>
-    <input id="serverAddressId" type="text" name="serverAddress" class="server-address-input-class" (change)="onServerAddressChange($event)">
-    <button id="refreshAddressButtonId" class="refreshAddressBtnClass" (click)="onRefreshBtnClicked()">Re-Connect</button>
-  </div>
+<div class="input-area-div"  *ngIf="serverAddress">
   <div class="regions-div">
     <div class="regionNameDivClass">
       <label for="regionName">Region Name:</label>
-      <select id="regionNameId" name="regionName" class="regionNameClass" (change)="onChangeRegion($event)">
-        <option *ngFor="let selectedRegion of regions" ([value])="selectedRegion">{{selectedRegion.name}}</option>
+      <select id="regionNameId" name="regionName" class="regionNameClass" value='{{selectedRegionName}}' (change)="onChangeRegion($event)">
+        <option *ngFor="let selectedRegionName of regions" ([value])="selectedRegionName">{{selectedRegionName}}</option>
       </select>
     </div>
 
     <div class="subRegionNameDivClass">
       <label for="subRegionName">SubRegion Name:</label>
-      <select id="subRegionNameId" name="subRegionName" class="subRegionNameClass" (change)="onChangeSubRegion($event)">
-        <option *ngFor="let selectedSubRegion of selectedSubRegions" ([value])="selectedSubRegion">{{selectedSubRegion.name}}</option>
+      <select id="subRegionNameId" name="subRegionName" class="subRegionNameClass" value='{{selectedSubRegion}}' (change)="onChangeSubRegion($event)">
+        <option *ngFor="let selectedSubRegion of selectedSubRegions" ([value])="selectedSubRegion">{{selectedSubRegion}}</option>
       </select>
     </div>
 
     <div class="cityDivClass">
       <label for="city">City:</label>
-      <select id="cityId" name="city" class="cityClass" (change)="onChangeCity($event)">
-        <option *ngFor="let selectedCity of selectedCities" ([value])="selectedCity">{{selectedCity.name}}</option>
+      <select id="cityId" name="city" class="cityClass" value='{{selectedCity}}' (change)="onChangeCity($event)">
+        <option *ngFor="let selectedCity of selectedCities" ([value])="selectedCity">{{selectedCity}}</option>
       </select>
     </div>
   </div>
