--- a/src/app/Components/output-area/output-area.component.css
+++ b/src/app/Components/output-area/output-area.component.css
@@ -15,7 +15,7 @@
 
 .data-grid-class {
   display: grid;
-  grid-template-columns: auto auto auto auto auto;
+  grid-template-columns: auto auto auto auto auto auto auto;
   grid-template-rows: auto auto auto auto auto auto auto auto auto auto;
   /*grid-template-areas:
     "a01 a02 a03 a04 a05"
