--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,10 @@
 .meteo-app {
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: auto 10fr auto;
+  grid-template-rows: auto auto 10fr auto auto;
   grid-template-areas:
     "h"
+    "gca"
     "ia1"
     "oa1"
     "f";
@@ -20,6 +21,10 @@
 
 app-header {
   grid-area: h;
+}
+
+app-general-config-area {
+  grid-area: gca;
 }
 
 app-input-area {
