--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class='meteo-app'>
   <app-header></app-header>
+  <app-general-config-area></app-general-config-area>
   <app-input-area></app-input-area>
   <app-output-area></app-output-area>
   <app-footer></app-footer>
