--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 .meteo-app {
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: auto auto 10fr auto auto;
+  grid-template-rows: auto auto auto auto auto;
   grid-template-areas:
     "h"
     "gca"
@@ -16,7 +16,6 @@
   /* sets font style of the app */
   font-family: 'Verdana';
   margin: 0;
-  height: 100%;
 }
 
 app-header {
